Fix speaker image not showing in firefox

--- a/src/components/SpeakersSection/Speakers/Speaker/style.scss
+++ b/src/components/SpeakersSection/Speakers/Speaker/style.scss
@@ -10,7 +10,7 @@
     align-items: center;
   }
   &__image{
-    clip-path: url(#svgPath);
+    // clip-path: url(#svgPath);
     width: 20rem;
     height: 20rem;
 
